--- a/speakers.html
+++ b/speakers.html
@@ -519,7 +519,7 @@
     <section class="py-20 section-bg" style="background-image: url('https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80')">
         <div class="container mx-auto px-6 text-center relative z-10">
             <div class="glass-effect p-8 md:p-12 max-w-4xl mx-auto">
-                <h2 class="text-3xl md:text-4xl font-bold mb-6 text-white">Ready to Join the Tech Revolution?</h2>
+                <h2 class="text-3xl md:text-4xl font-bold mb-6 text-white">Ready to Join the Largest Medical Students Conference?</h2>
                 <p class="text-xl mb-8 max-w-2xl mx-auto text-white/90">
                     Secure your spot today and gain access to cutting-edge knowledge, networking opportunities, and exclusive content.
                 </p>
