--- a/about.html
+++ b/about.html
@@ -78,6 +78,7 @@
             z-index: 1;
         }
     </style>
+    <link rel="icon" type="image/png" href="images/wite bg.png">
 </head>
 <body class="font-sans">
     <!-- Navigation -->
@@ -106,10 +107,10 @@
         </div>
         <div id="mobile-menu" class="md:hidden hidden flex-col space-y-4 px-4 pb-4 bg-white shadow-lg absolute top-16 left-0 w-full transition-all duration-300 transform -translate-y-4 opacity-0">
             <a href="index.html" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition">Home |</a>
-            <a href="#" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> About |</a>
-            <a href="#" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> Program |</a>
-            <a href="#" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> Speakers |</a>
-            <a href="#" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> Venue </a>
+            <a href="about.html" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> About |</a>
+            <a href="program.html" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> Program |</a>
+            <a href="speakers.html" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> Speakers |</a>
+            <a href="venue.html" class="text-[#213874] font-medium hover:text-[#1a6ac3] transition"> Venue </a>
             <a href="https://tamsatanzania.org/eventsthe-17th-international-scientific-conference-15th-tamsa-general-assembly/application-form/" class="bg-[#1a6ac3] text-white px-4 py-2 rounded-md font-medium hover:bg-[#213874] transition">Register</a>
         </div>
     </nav>
@@ -136,12 +137,12 @@
     </div>
 
     <!-- Chairperson's Message -->
-    <div id="message" class="section-with-bg py-16" style="background-image: url('https://images.unsplash.com/photo-1434030216411-0b793f4b4173?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+    <div id="message" class="section-with-bg py-16" style="background-image: url('images/mootcourt\ knockout.png');">
         <div class="container mx-auto px-6 section-content">
             <div class="max-w-5xl mx-auto glass-card rounded-xl shadow-lg overflow-hidden">
                 <div class="md:flex">
                     <div class="md:w-1/3 bg-[#1a6ac3] flex items-center justify-center p-8">
-                        <img src="images/murtaza.jpeg" alt="Chairperson" class="rounded-full border-4 border-white w-48 h-48 object-cover">
+                        <img src="images/chair.jpg" alt="Chairperson" class="rounded-full border-4 border-white w-48 h-48 object-cover">
                     </div>
                     <div class="md:w-2/3 p-8">
                         <h2 class="text-3xl font-bold text-[#213874] mb-4">Message from the Chairperson</h2>
@@ -153,7 +154,7 @@
                         <p class="text-gray-600 mb-4">From October 4th to 9th, 2025, Tanzania will become a hub of energy and ideas, uniting hundreds of medical students, healthcare experts, institutions, and stakeholders.</p>
                         <p class="text-gray-600 mb-4">We are standing at the brink of a new era in healthcare—where innovation meets compassion, and artificial intelligence walks hand in hand with human touch. This year’s conference is more than an event—it’s a movement. A convergence of minds from across Tanzania, Africa, and beyond. A fertile ground for knowledge exchange, policy dialogue, research presentations, and collaborative action that will ripple across communities and institutions alike.</p>
                         <p class="text-gray-600">We can’t wait to welcome you to Dar es Salaam—where ideas will soar, collaborations will blossom, and lifelong memories will be made.</p>
-                        <p class="text-gray-700 font-medium mt-6">Dr. John Doe<br>Chairperson, GA Organizing Committee</p>
+                        <p class="text-gray-700 font-medium mt-6">Suleiman Ngede<br>Chairperson, GA Organizing Committee</p>
                     </div>
                 </div>
             </div>
@@ -161,7 +162,7 @@
     </div>
 
     <!-- Committee Section -->
-    <div id="committee" class="section-with-bg py-16" style="background-image: url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+    <div id="committee" class="section-with-bg py-16" style="background-image: url('images/mootcourt\ knockout.png');">
         <div class="container mx-auto px-6 section-content">
             <h2 class="text-3xl font-bold text-center text-white mb-12">Organizing Committee</h2>
             
@@ -169,10 +170,10 @@
                 <!-- Committee Member 1 -->
                 <div class="committee-card glass-card rounded-xl shadow-md overflow-hidden transition duration-300">
                     <div class="h-48 bg-[#1a6ac3] flex items-center justify-center">
-                        <img src="images/murtaza.jpeg" alt="Committee Member" class="h-full w-full object-cover">
+                        <img src="images/vice.jpg" alt="Committee Member" class="h-full w-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-1">Seleman</h3>
+                        <h3 class="text-xl font-bold text-gray-800 mb-1">Charles Nkuba</h3>
                         <p class="text-[#1a6ac3] mb-3">Assisstant Chairperson</p>
                         <p class="text-gray-600">Enthusiast Leader from Kairuki University</p>
                         <div class="mt-4 flex space-x-3">
@@ -186,12 +187,12 @@
                 <!-- Committee Member 2 -->
                 <div class="committee-card glass-card rounded-xl shadow-md overflow-hidden transition duration-300">
                     <div class="h-48 bg-[#1a6ac3] flex items-center justify-center">
-                        <img src="images/murtaza.jpeg" alt="Committee Member" class="h-full w-full object-cover">
+                        <img src="images/Invitation.png" alt="Committee Member" class="h-full w-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-1">Prof. Elena Rodriguez</h3>
-                        <p class="text-[#1a6ac3] mb-3">Finance Chair</p>
-                        <p class="text-gray-600">Director of Financial Planning at MIT with expertise in academic budgeting and resource allocation.</p>
+                        <h3 class="text-xl font-bold text-gray-800 mb-1">Innocent Sambua</h3>
+                        <p class="text-[#1a6ac3] mb-3">General Secretary</p>
+                        <p class="text-gray-600">Hardworking leader from KIUT</p>
                         <div class="mt-4 flex space-x-3">
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-twitter"></i></a>
@@ -203,12 +204,12 @@
                 <!-- Committee Member 3 -->
                 <div class="committee-card glass-card rounded-xl shadow-md overflow-hidden transition duration-300">
                     <div class="h-48 bg-[#1a6ac3] flex items-center justify-center">
-                        <img src="images/murtaza.jpeg" alt="Committee Member" class="h-full w-full object-cover">
+                        <img src="images/dina.png" alt="Committee Member" class="h-full w-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-1">Dr. James Wilson</h3>
-                        <p class="text-[#1a6ac3] mb-3">Logistics Chair</p>
-                        <p class="text-gray-600">Event management specialist with experience organizing over 50 international conferences.</p>
+                        <h3 class="text-xl font-bold text-gray-800 mb-1">Dina Ngiga</h3>
+                        <p class="text-[#1a6ac3] mb-3">Treasurer</p>
+                        <p class="text-gray-600">All about money.</p>
                         <div class="mt-4 flex space-x-3">
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-twitter"></i></a>
@@ -220,12 +221,12 @@
                 <!-- Committee Member 4 -->
                 <div class="committee-card glass-card rounded-xl shadow-md overflow-hidden transition duration-300">
                     <div class="h-48 bg-[#1a6ac3] flex items-center justify-center">
-                        <img src="images/murtaza.jpeg" alt="Committee Member" class="h-full w-full object-cover">
+                        <img src="images/justice.png" alt="Committee Member" class="h-full w-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-1">Dr. Priya Patel</h3>
-                        <p class="text-[#1a6ac3] mb-3">Publicity Chair</p>
-                        <p class="text-gray-600">Marketing professor at NYU with expertise in digital communication strategies.</p>
+                        <h3 class="text-xl font-bold text-gray-800 mb-1">Justice </h3>
+                        <p class="text-[#1a6ac3] mb-3">Advisory Board</p>
+                        <p class="text-gray-600">A born leader</p>
                         <div class="mt-4 flex space-x-3">
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-twitter"></i></a>
@@ -237,12 +238,12 @@
                 <!-- Committee Member 5 -->
                 <div class="committee-card glass-card rounded-xl shadow-md overflow-hidden transition duration-300">
                     <div class="h-48 bg-[#1a6ac3] flex items-center justify-center">
-                        <img src="images/murtaza.jpeg" alt="Committee Member" class="h-full w-full object-cover">
+                        <img src="images/IMG_1871.jpeg" alt="Committee Member" class="h-full w-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-1">Prof. David Kim</h3>
-                        <p class="text-[#1a6ac3] mb-3">Technical Chair</p>
-                        <p class="text-gray-600">Renowned researcher in machine learning and AI ethics at University of Toronto.</p>
+                        <h3 class="text-xl font-bold text-gray-800 mb-1">Mohamed Faisal</h3>
+                        <p class="text-[#1a6ac3] mb-3">Advisory board</p>
+                        <p class="text-gray-600">Excellency</p>
                         <div class="mt-4 flex space-x-3">
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-twitter"></i></a>
@@ -254,12 +255,12 @@
                 <!-- Committee Member 6 -->
                 <div class="committee-card glass-card rounded-xl shadow-md overflow-hidden transition duration-300">
                     <div class="h-48 bg-[#1a6ac3] flex items-center justify-center">
-                        <img src="images/murtaza.jpeg" alt="Committee Member" class="h-full w-full object-cover">
+                        <img src="images/mootcourt knockout.png" alt="Committee Member" class="h-full w-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-gray-800 mb-1">Dr. Angela Smith</h3>
+                        <h3 class="text-xl font-bold text-gray-800 mb-1">Angel</h3>
                         <p class="text-[#1a6ac3] mb-3">Sponsorship Chair</p>
-                        <p class="text-gray-600">Industry relations expert with connections to major tech companies and research institutions.</p>
+                        <p class="text-gray-600">research institutions.</p>
                         <div class="mt-4 flex space-x-3">
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="text-[#1a6ac3] hover:text-[#213874]"><i class="fab fa-twitter"></i></a>
@@ -272,7 +273,7 @@
     </div>
 
     <!-- Resources Section -->
-    <div class="section-with-bg py-16" style="background-image: url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+    <div class="section-with-bg py-16" style="background-image: url('images/mootcourt\ knockout.png');">
         <div class="container mx-auto px-6 section-content">
             <h2 class="text-3xl font-bold text-center text-white mb-12">Conference Resources</h2>
             
@@ -312,26 +313,26 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-[#213874] text-white py-12">
+    <footer class="bg-gray-900 text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
                     <img src="images/Tamsa logo (1).png" alt="TAMSA Logo" class="h-12 mb-4">
-                    <p class="text-gray-300">TAMSA is a member of the International Federation for Medical Students' Associations (IFMSA), which is one of the world's oldest and largest student-run organizations recognized by the World Health Organization as an official international forum for Medical Students.</p>
+                    <p class="text-gray-400">TAMSA is a member of the International Federation for Medical Students' Associations (IFMSA), which is one of the world's oldest and largest student-run organizations recognized by the World Health Organization as an official international forum for Medical Students.</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
                     <ul class="space-y-2">
-                        <li><a href="index.html" class="text-gray-300 hover:text-white transition">Home</a></li>
-                        <li><a href="about.html" class="text-gray-300 hover:text-white transition">About</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white transition">Program</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white transition">Speakers</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white transition">Venue</a></li>
+                        <li><a href="index.html" class="text-gray-400 hover:text-white transition">Home</a></li>
+                        <li><a href="about.html" class="text-gray-400 hover:text-white transition">About</a></li>
+                        <li><a href="program.html" class="text-gray-400 hover:text-white transition">Program</a></li>
+                        <li><a href="speakers.html" class="text-gray-400 hover:text-white transition">Speakers</a></li>
+                        <li><a href="venue.html" class="text-gray-400 hover:text-white transition">Venue</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold mb-4">Contact</h3>
-                    <ul class="space-y-2 text-gray-300">
+                    <ul class="space-y-2 text-gray-400">
                         <li class="flex items-start">
                             <i class="fas fa-map-marker-alt mt-1 mr-3"></i>
                             <span>Muhimbili University of Health & Allied Sciences (MUHAS), United Nations Road, Upanga, Ilala Tanzania.</span>
@@ -349,25 +350,26 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
                     <div class="flex space-x-4">
-                        <a href="#" class="text-gray-300 hover:text-white transition"><i class="fab fa-facebook-f text-xl"></i></a>
-                        <a href="#" class="text-gray-300 hover:text-white transition"><i class="fab fa-twitter text-xl"></i></a>
-                        <a href="https://www.instagram.com/tamsatanzania?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="text-gray-300 hover:text-white transition"><i class="fab fa-instagram text-xl"></i></a>
-                        <a href="#" class="text-gray-300 hover:text-white transition"><i class="fab fa-linkedin-in text-xl"></i></a>
-                        <a href="#" class="text-gray-300 hover:text-white transition"><i class="fab fa-youtube text-xl"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-facebook-f text-xl"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-twitter text-xl"></i></a>
+                        <a href="https://www.instagram.com/tamsatanzania?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="text-gray-400 hover:text-white transition"><i class="fab fa-instagram text-xl"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-linkedin-in text-xl"></i></a>
+                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-youtube text-xl"></i></a>
                     </div>
                     <div class="mt-6">
                         <h4 class="font-medium mb-2">Subscribe to Newsletter</h4>
                         <div class="flex">
                             <input type="email" placeholder="Your email" class="px-4 py-2 rounded-l-md text-gray-900 w-full">
-                            <button class="bg-[#1a6ac3] px-4 py-2 rounded-r-md hover:bg-[#213874] transition">
+                            <button class="bg-blue-600 px-4 py-2 rounded-r-md hover:bg-blue-700 transition">
                                 <i class="fas fa-paper-plane"></i>
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-300">
-                <p>&copy; 2025 TAMSA 15th GA and 17th ISC. All rights reserved.|Developed by MOFAS</p>
+            <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
+                <p>&copy; 2025 TAMSA 15th GA and 17th ISC. All rights reserved. | Developed by <a href="xxx.html" target="_blank">MOFAS</a></p>
+
             </div>
         </div>
     </footer>
