--- a/venue.html
+++ b/venue.html
@@ -479,7 +479,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 TAMSA 15th GA and 17th ISC. All rights reserved. | Developed by <a href="xxx.html" target="_blank">MOFAS</a></p>
+                <p>&copy; 2025 TAMSA 15th GA and 17th ISC. All rights reserved. | Developed by <a href="jerry.html" target="_blank">MOFAS</a></p>
 
             </div>
         </div>
@@ -533,3 +533,4 @@
     </script>
 </body>
 </html>
+
